--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aula-08-estrutura-jwt-revisao",
+  "name": "projeto03_mod4",
   "version": "0.0.1",
   "description": "",
   "author": "",
